# tg_bot_investagregator

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml  test_main.py
migrations/: env.py
migrations/versions/: 2025_09_26_2046-074ab121a4a9_init.py  2025_10_21_2002-ae58908d9a55_init.py  2025_11_15_1312-c6d73ac95136_add_readable_fields.py  2025_11_15_1313-425eac3a8416_data_migration.py
src/: container.py  enums.py  utils.py
src/constants/: __init__.py  others.py
src/constants/templates/: __init__.py  callback_templates.py  commands_templates.py  message_templates.py
src/controllers/telegram_bot/: states.py
src/controllers/telegram_bot/handlers/: __init__.py
src/controllers/telegram_bot/handlers/callbacks/: __init__.py  admin_callback.py  cancel_callback.py  menu_callback.py
src/controllers/telegram_bot/handlers/commands/: __init__.py  admin.py  chat_id.py  help.py  menu.py  start.py  support.py
src/controllers/telegram_bot/handlers/messages/: __init__.py  support_conversation.py
src/controllers/telegram_bot/handlers/messages/admin_converstations/: __init__.py  add_new_product_conversation.py  add_new_product_type_conversation.py  (+2 more)
src/controllers/telegram_bot/utils/: __init__.py  admin_virfication.py  get_callback_query.py  init_handlers.py  verify_user.py
src/gateways/: object_storage_client.py
src/gateways/database/: database.py  session.py
src/gateways/database/models/: __init__.py  product.py  product_type.py  support_dialog.py
src/settings/: app.py  database.py  object_storage.py  telegram.py
